--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 .up,.center {
+    margin-top: 3em;
     margin-bottom: auto; 
 }
 .up, .center, .down {
@@ -29,14 +30,19 @@ p {
     margin-bottom: 20px;
 }
 
-button {
-    margin-top: 10px;
-    padding: 10px;
-    font-size: 1em;
-    background-color: #008CBA;
-    color: white;
-    border: none;
+#refreshButton {
+    padding: 10px 15px;
+    font-size: 16px;
     cursor: pointer;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+#refreshButton:hover {
+    background-color: #2980b9;
 }
 
 /*---------------------------------------------------*/
@@ -45,6 +51,7 @@ table {
     border-collapse: collapse;
     width: 100%;
     margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 table, td {
@@ -56,6 +63,22 @@ td {
 }
 
 tr:first-child {
-    background-color: #4CAF50; 
+    background-color: darkblue; 
     color: white; 
+}
+
+.low-risk {
+    background-color: lightgreen;
+}
+
+.medium-risk {
+    background-color: lightyellow;
+}
+
+.high-risk {
+    background-color: lightcoral;
+}
+
+.header-row {
+    margin-top: 1em;
 }
