--- a/styles.css
+++ b/styles.css
@@ -11,45 +11,52 @@ body {
 }
 
 .up,.center {
-    margin-top: 3em;
+    margin-top: 2em;
     margin-bottom: auto; 
 }
 .up, .center, .down {
     text-align: center;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 h1 {
     font-size: 2.5em;
     color: #333;
-    margin-bottom: 20px;
 }
 
 p {
     font-size: 1em;
     color: #333;
-    margin-bottom: 20px;
 }
 
 #refreshButton {
-    padding: 10px 15px;
-    font-size: 16px;
+    padding: 0.8em 0.8em;
+    font-size: 1em;
     cursor: pointer;
     background-color: #3498db;
     color: #fff;
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    margin-top: 1em;
+    margin-bottom: 2em;
 }
 
 #refreshButton:hover {
     background-color: #2980b9;
 }
 
+#refreshButton:active {
+    background-color: #4CAF50;
+    color: white;
+}
+
 /*---------------------------------------------------*/
 
 table {
     border-collapse: collapse;
-    width: 100%;
+    width: auto;
     margin-top: 1em;
     margin-bottom: 1em;
 }
@@ -81,4 +88,29 @@ tr:first-child {
 
 .header-row {
     margin-top: 1em;
+}
+
+
+
+
+#sortDropdown {
+    font-size: 14px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#sortDropdown option {
+    background-color: #fff;
+    color: #333;
+}
+
+#sortDropdown option:hover {
+    background-color: #f0f0f0;
+}
+
+#sortDropdown:active {
+    background-color: lightblue;
+    color: white;
 }
