--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,11 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
-    background-color: #f4f4f4;
+    height: 100%;
+    background-color: red; /* For browsers that do not support gradients */
+    background-image: linear-gradient(black, green);
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .up,.center {
@@ -22,16 +25,19 @@ body {
 
 h1 {
     font-size: 2.5em;
-    color: #333;
+    color: whitesmoke;
 }
 
 p {
-    font-size: 1em;
-    color: #333;
+    font-size: 0.8em;
+    color: white;
 }
 
+label{
+    color:white;
+}
 #refreshButton {
-    padding: 0.8em 0.8em;
+    padding: 0.6em 0.6em;
     font-size: 1em;
     cursor: pointer;
     background-color: #3498db;
@@ -56,22 +62,32 @@ p {
 
 table {
     border-collapse: collapse;
-    width: auto;
+    width: 100em;
     margin-top: 1em;
     margin-bottom: 1em;
 }
 
 table, td {
     border: 1px solid #333;
+    border-radius: 3px;
+    padding: 25px 30px;
+    border-collapse: collapse;
 }
 
 td {
     padding: 1em;
 }
 
+tr{
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    flex-basis: 10%;
+    font-size: 10px;
+}
+
 tr:first-child {
-    background-color: darkblue; 
-    color: white; 
+    background-color: #95A5A6;
+    font-size: 14px;
 }
 
 .low-risk {
