--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,14 @@ body {
 }
 .up, .center, .down {
     text-align: center;
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
 h1 {
     font-size: 2.5em;
+    letter-spacing: 0.08em;
+    font-weight: 100;
     color: whitesmoke;
 }
 
@@ -63,7 +65,7 @@ label{
 table {
     border-collapse: collapse;
     width: 100em;
-    margin-top: 1em;
+    margin-top: 3em;
     margin-bottom: 1em;
 }
 
@@ -71,6 +73,7 @@ table, td {
     border: 1px solid #333;
     border-radius: 3px;
     padding: 25px 30px;
+    height: 3em;
     border-collapse: collapse;
 }
 
