--- a/tab.css
+++ b/tab.css
@@ -6,7 +6,7 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     background-color: red; /* For browsers that do not support gradients */
     background-image: linear-gradient(black, green);
     letter-spacing: 0.03em;
@@ -38,7 +38,8 @@ p {
 label{
     color:white;
 }
-#refreshButton {
+
+button {
     padding: 0.6em 0.6em;
     font-size: 1em;
     cursor: pointer;
@@ -51,11 +52,11 @@ label{
     margin-bottom: 2em;
 }
 
-#refreshButton:hover {
+button:hover {
     background-color: #2980b9;
 }
 
-#refreshButton:active {
+button:active {
     background-color: #4CAF50;
     color: white;
 }
