filtrage avec les sources
auppresion du tri alphabetique

pb : des requettes ont des arguments differentes, ce qui fausse le tableau. Il faut se decider sur ce qu'on garde ou non

--- a/tab.css
+++ b/tab.css
@@ -104,15 +104,11 @@ tr:first-child {
     font-size: 14px;
 }
 
-.low-risk {
+.analyzed {
     background-color: lightgreen;
 }
 
-.medium-risk {
-    background-color: lightyellow;
-}
-
-.high-risk {
+.modified {
     background-color: lightcoral;
 }
 
