--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     background-image: linear-gradient(black, green);
     letter-spacing: 0.03em;
     text-transform: uppercase;
