--- a/index.css
+++ b/index.css
@@ -6,25 +6,24 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     background-image: linear-gradient(black, green);
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    
 }
 
 html{
     background-image: black;
     animation: fadeIn 1.5s ease-in-out forwards;
 }
+
 @keyframes fadeIn {
     from {
         opacity: 0;
-        background-image: black;
     }
     to {
         opacity: 1;
-        
     }
 }
 
@@ -48,6 +47,41 @@ h1 {
     letter-spacing: 0.08em;
     font-weight: 100;
     color: whitesmoke;
+}
+
+.presentation-container {
+    animation: fadeIn 1s ease-in-out forwards;
+    margin-bottom: 3em;
+}
+.presentation-container > h2 {
+    font-size: 2.5em;
+    letter-spacing: 0.08em;
+    font-weight: 100;
+    margin-left: 1em;
+    color: whitesmoke;
+    text-align: left; 
+}
+
+.presentation-container > h3 {
+    font-size: 2em;
+    letter-spacing: 0.08em;
+    font-weight: 100;
+    margin-left: 1em;
+    color: whitesmoke;
+    text-align: left; 
+}
+
+.presentation-container > img {
+    width: 150px;
+    height: auto;
+    margin-right: 1em;
+}
+
+.presentation-container > p {
+    margin-left: 2.5em;
+    margin-right: 2.5em;
+    text-align: justify; 
+    line-height: 3;
 }
 
 p {
@@ -165,13 +199,20 @@ hr{
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    animation: fadeIn 0.5s ease-in-out forwards;
 }
 
 .team-info {
     display: flex;
     flex-direction: row; /* Changer de colonne à ligne */
     align-items: center;
-    width: 70%; /* Ajustez la largeur selon vos besoins */
+}
+.team-info-text {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    width: auto;
+    gap:1em;
 }
 
 .team-info img {
@@ -186,4 +227,53 @@ hr{
 
 .team-info p {
     margin: 0; /* Supprimer la marge par défaut des paragraphes */
+}
+
+
+.tableContainer{
+    overflow-x: auto;
+    width: 70em;
+    margin-top: 3em;
+    margin-bottom: 1em;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table, td {
+    width: auto;
+    border: 1px solid #333;
+    border-radius: 3px;
+    padding: 25px 30px;
+    height: 1em;
+    border-collapse: collapse;
+}
+
+td {
+    padding: 1em;
+}
+
+tr{
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    flex-basis: 10%;
+    font-size: 10px;
+}
+
+tr:first-child {
+    background-color: #95A5A6;
+    font-size: 14px;
+}
+
+.analyzed {
+    background-color: lightgreen;
+}
+
+.modified {
+    background-color: lightcoral;
+}
+
+.header-row {
+    margin-top: 1em;
 }
