--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
     min-height: 100vh;
     height: 100%;
-    background-image: linear-gradient(black, green);
+    background-image: linear-gradient(black, darkgreen);
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
@@ -27,8 +27,8 @@ html{
     }
 }
 
-.up,.center {
-    margin-top: 2em;
+.center {
+    margin-top: 1em;
     margin-bottom: auto; 
 }
 .up, .center, .down {
@@ -153,10 +153,12 @@ button {
     border-radius: 5px;
     transition: background-color 0.3s ease;
     margin-top: 1em;
+    margin-left: 0.5em;
     margin-bottom: 2em;
 }
 
 button:hover {
+    
     background-color: #2980b9;
 }
 
@@ -276,4 +278,74 @@ tr:first-child {
 
 .header-row {
     margin-top: 1em;
+}
+
+.info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:0.5em;
+    margin-top: 2em;
+    border-radius: 5px;
+}
+
+.info i {
+    font-size: 2em;
+    color: white;
+    margin-right: 10px;
+}
+
+.info p {
+    color: white;
+    margin: 0;
+}
+
+.info button {
+    padding: 10px;
+    background-color:#4CAF50;
+    margin-top: 2em;
+    font-size: 16px;
+}
+
+.info button:hover {
+    padding: 10px;
+    background-color:green;
+    margin-top: 2em;
+    font-size: 16px;
+}
+
+.contact-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5em;
+}
+
+
+.fade-out {
+    animation: fadeOutAnimation 1s ease-out forwards;
+}
+
+@keyframes fadeOutAnimation {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        display: none; /* Assurez-vous que la div disparaît après l'animation */
+    }
+}
+
+.fade-in {
+    animation: fadeIn 1s ease-out forwards;
+}
+
+@keyframes fadeOutAnimation {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        display: none; /* Assurez-vous que la div disparaît après l'animation */
+    }
 }
