--- a/index.css
+++ b/index.css
@@ -8,13 +8,12 @@ body {
     align-items: center;
     min-height: 100vh;
     height: 100%;
-    background-image: linear-gradient(black, darkgreen,black);
+    background-color: rgb(0, 5, 14);
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
 html{
-    background-image: black;
     animation: fadeIn 1.5s ease-in-out forwards;
 }
 
@@ -33,8 +32,7 @@ html{
 }
 .up, .center, .down {
     text-align: center;
-    margin-left: 1em;
-    margin-right: 1em;
+    width: 100%;
 }
 
 .language{
@@ -42,12 +40,20 @@ html{
     margin-bottom: 1em;
 }
 
-h1 {
-    margin-top: 2em;
-    font-size: 2.5em;
-    letter-spacing: 0.08em;
-    font-weight: 100;
-    color: whitesmoke;
+.logo >img{
+    margin: 2em 1em 2em 1em;
+    background-color: whitesmoke;
+    border-radius: 1rem;
+    width: 100%;
+}
+
+.logo{
+    margin-left: 1em;
+    margin-right: 1em;
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    border-radius: 10px;
 }
 
 .presentation-container {
@@ -95,14 +101,16 @@ label{
 }
 
 .menu{
-    background: hsl(204, 70%, 53%);
+    background: whitesmoke;
     display: flex;
     align-items:center;
     justify-content: space-between;
-    border-radius: 10px;
-    margin:0;
     padding-left: 2em;
     padding-right: 2em;
+}
+
+.menu >img {
+    height: 5em;
 }
 
 @media screen and (max-width: 800px) {
@@ -126,6 +134,7 @@ label{
 
 .menu > p {
     opacity: 1;
+    color : black;
     text-decoration: none;
     position: relative;
     display: inline-block;
@@ -140,15 +149,15 @@ label{
     content: "";
     position: absolute;
     width: 100%;
-    height: 2px; /* Hauteur du soulignement */
-    bottom: 0;
+    height: 1px; 
+    bottom: 1px;
     left: 0;
     background-color: transparent;
-    transition: background-color 0.3s ease; /* Ajoutez une transition */
+    transition: background-color 0.3s ease; 
 }
 
 .menu > p:hover::after {
-    background-color: white; /* Couleur du soulignement au survol */
+    background-color: black; /* Couleur du soulignement au survol */
 }
 
 @keyframes fadeInText {
@@ -226,7 +235,7 @@ hr{
 
 .team-info {
     display: flex;
-    flex-direction: row; /* Changer de colonne à ligne */
+    flex-direction: row;
     align-items: center;
 }
 .team-info-text {
@@ -240,7 +249,7 @@ hr{
 .team-info img {
     height: 5em;
     width: auto;
-    margin-right: 10px; /* Marge à droite de l'image */
+    margin-right: 10px;
 }
 
 .team-info a {
@@ -248,15 +257,17 @@ hr{
 }
 
 .team-info p {
-    margin: 0; /* Supprimer la marge par défaut des paragraphes */
+    margin: 0;
 }
 
 
 .tableContainer{
     overflow-x: auto;
-    width: 70em;
-    margin-top: 3em;
-    margin-bottom: 1em;
+    margin : 3em 2em 1em 2em;
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    border-radius: 10px;
 }
 table {
     border-collapse: collapse;
@@ -325,14 +336,15 @@ tr:first-child {
 
 .info button {
     padding: 10px;
-    background-color:#4CAF50;
+    background-color:#4f0341;
     margin-top: 2em;
     font-size: 16px;
 }
 
 .info button:hover {
     padding: 10px;
-    background-color:green;
+    background-color:white;
+    color :black;
     margin-top: 2em;
     font-size: 16px;
 }
