--- a/index.css
+++ b/index.css
@@ -17,6 +17,11 @@ html{
     animation: fadeIn 1.5s ease-in-out forwards;
 }
 
+.bold-text {
+    font-weight: bold;
+    margin: 1em !important;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -64,10 +69,6 @@ html{
     align-items:center;
     justify-content: space-between;
     border-radius: 10px;
-}
-
-.presentation-container {
-    animation: fadeIn 1s ease-in-out forwards;
 }
 
 .presentation-container > h2,h3 {
@@ -150,54 +151,67 @@ p {
     }
 }
 
-.menu > p {
-    opacity: 1;
-    margin-bottom:auto;
-    margin-top: auto;
-    color : black;
-    text-decoration: none;
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    font-size: 1em;
+.menu > button {
+  position: relative;
+  overflow: hidden;
+  color: #18181a;
+  cursor: pointer;
+  background: whitesmoke;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  height: 5em;
+  border-radius: 0;
 }
 
-.menu > p:hover {
-    animation: fadeInText 0.5s ease-in-out forwards;
-    
+.menu > button span:first-child {
+  position: relative;
+  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 10;
 }
 
-.menu > p::after {
-    content: "";
-    background-color: #4f0341;
-    position: absolute;
-    width: 100%;
-    height: 1px; 
-    bottom: 1px;
-    left: 0;
-    background-color: transparent;
-    transition: background-color 0.3s ease; 
+.menu > button span:last-child {
+  color: whitesmoke;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 100;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translateY(225%) translateX(-50%);
 }
 
-.menu > p:hover::after {
-    background-color: black; /* Couleur du soulignement au survol */
+.menu > button:hover {
+    background-color: whitesmoke;
+    color: black;
+}
+.menu > button:after {
+  content: "";
+  position: absolute;
+  bottom: -50%;
+  left: 0;
+  width: 100%;
+  height: 5em;
+  background-color: #4f0341;
+  color: whitesmoke;
+  transform-origin: bottom center;
+  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  transform: skewY(9.3deg) scaleY(0);
+  z-index: 50;
 }
 
-@keyframes fadeInText {
-    from {
-        background-color: #ffffff;
-        color:black;
-        text-decoration: none;
-    }
-    to {
-        background-color: #4f0341;
-        color: whitesmoke;
-        text-decoration: underline; 
-    }
+.menu > button:hover:after {
+  transform-origin: bottom center;
+  transform: skewY(9.3deg) scaleY(2);
 }
 
-
-
+.menu > button:hover span:last-child {
+  transform: translateX(-50%) translateY(-25%);
+  opacity: 1;
+  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+}
 
 button {
     padding: 0.6em 0.6em;
@@ -208,13 +222,13 @@ button {
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    margin-top: 1em;
-    margin-left: 0.5em;
-    margin-bottom: 2em;
+    margin-left: 1em;
 }
 
 button:hover {
-    background-color: #2980b9;
+    background-color: #4f0341;
+    color: white;
+    border-radius: 0;
 }
 
 button:active {
@@ -253,6 +267,9 @@ hr{
 .membres-team-info {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    margin-left: 2em;
+    margin-right: 2em;
   }
 
   .team-info-container {
@@ -260,8 +277,6 @@ hr{
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin-left: 2em;
-    margin-right: 2em;
     width: 100%;
   }
 
@@ -285,7 +300,8 @@ hr{
     background-color: #4f0341;
     padding : 1em;
     border-radius: 1em;
-    width: 29%;
+    min-width: 25%;
+    width: 30%;
   }
 
   .team-info:nth-child(even) {
@@ -332,6 +348,11 @@ hr{
     align-items:center;
     justify-content: space-between;
     border-radius: 10px;
+    color:whitesmoke
+}
+
+.tableau-container > label{
+    color: whitesmoke;
 }
 table {
     border-collapse: collapse;
@@ -367,31 +388,31 @@ tr:first-child {
     color: white;
 }
 
-.analyzed {
-    background-color: lightgreen;
-}
-
-.modified {
-    background-color: lightcoral;
-}
-
-.header-row {
-    margin-top: 1em;
-}
-
 .info {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     gap:0.5em;
-    margin-top: 2em;
-    border-radius: 5px;
+    margin: 2em 2em 2em 2em;
+    border-radius: 1em;
+    background-color: #4f0341;
+    padding: 1em;
+    border-radius: 1em;
+    transition: background-color 0.5s ease;
+}
+
+.info:hover{
+    background-color: #4CAF50;
 }
 
 .info i {
-    font-size: 2em;
+    font-size: 3em;
     color: white;
-    margin-right: 10px;
+}
+.info > i {
+    display: flex;
+    flex-direction: row;
+    cursor: pointer;
 }
 
 .info p {
@@ -399,66 +420,26 @@ tr:first-child {
     margin: 0;
 }
 
-.info button {
-    padding: 10px;
-    background-color:#4f0341;
-    margin-top: 2em;
-    font-size: 16px;
-}
-
-.info button:hover {
-    padding: 10px;
-    background-color:white;
-    color :black;
-    margin-top: 2em;
-    font-size: 16px;
-}
-
 .contact-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 5em;
+    margin: 2em 2em 4em 2em;
 }
 
 .contact-container > h2 {
-    background-color: #4f0341;
-    border-radius: 1.5em;
-    padding: 1em;
-    margin-right: 1em;
-    font-size: 1em;
-    letter-spacing: 0.08em;
-    font-weight: 100;
     margin-left: 1em;
+    margin-right: 1em;
+    width: 100%;
+    font-size: 2em;
+    font-style: italic;
     color: whitesmoke;
-    text-align: left; 
 }
 
-
-.fade-out {
-    animation: fadeOutAnimation 1s ease-out forwards;
-}
-
-@keyframes fadeOutAnimation {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        display: none; /* Assurez-vous que la div disparaît après l'animation */
-    }
+.contact-text{
+    display: flex;
 }
 
 .fade-in {
     animation: fadeIn 1s ease-out forwards;
-}
-
-@keyframes fadeOutAnimation {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        display: none; /* Assurez-vous que la div disparaît après l'animation */
-    }
 }
