--- a/index.css
+++ b/index.css
@@ -11,11 +11,12 @@ body {
     background-color: rgb(0, 5, 14);
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    width: 100%;
 }
 
 html{
     animation: fadeIn 1.5s ease-in-out forwards;
-    width: 100vw;
+    width: 100%;
 }
 
 .bold-text {
@@ -159,6 +160,10 @@ button:active {
 
 
 /*---------------------------------------------- PRESENTATION ----------------------------------------------------------------------*/
+
+.presentation-container{
+    margin-bottom: 3em;
+}
 
 .presentation-container > h2,h3 {
     background-color: #4f0341;
@@ -495,12 +500,12 @@ hr{
 
 .tableContainer{
     top :0;
-    margin : 3em 2em 1em 2em;
     display: flex;
     justify-content: space-between;
-    border-radius: 10px;
-    color:whitesmoke;
+    border-radius: 1em;
     animation: fadeIn 1s ease-out forwards;
+    width: 100%;
+    margin-bottom: 5em;
 }
 
 .tableau-container > label{
@@ -509,22 +514,24 @@ hr{
 
 .vulnerabilityTable {
     padding: 1em;
-    width: 100%;
-    height: 100%;
-    overflow-x: auto; 
+    overflow-x:auto; 
     overflow-y: visible;
 }
 
 table {
-    
     border-collapse: collapse;
-    
-    
 }
 
+.research{
+    color:whitesmoke;
+}
+
+thead{
+    width: 50%;
+}
 table, td {
-    width: auto;
-    border-radius: 3px;
+    width: 100%;
+    border-radius: 0.3em;
     padding: 25px 30px;
     height: 1em;
     top:0;
