--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ button:active {
 
 .center {
     margin-top: 1em;
-    margin-bottom: auto; 
+    margin-bottom: 3em; 
 }
 .up, .center, .down {
     text-align: center;
