--- a/index.css
+++ b/index.css
@@ -21,7 +21,6 @@ html{
 
 .bold-text {
     font-weight: bold;
-    margin: 1em !important;
 }
 
 button {
@@ -351,37 +350,6 @@ p {
     }
 }
 
-/*-------------------------------------- TABLEAU ---------------------------------------------------*/
-
-
-#sortDropdown {
-    font-size: 14px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-#sortDropdown option {
-    background-color: #fff;
-    color: #333;
-}
-
-#sortDropdown option:hover {
-    background-color: #f0f0f0;
-}
-
-#sortDropdown:active {
-    background-color: lightblue;
-    color: white;
-}
-
-
-hr{
-    width: 5em;
-}
-
-
 /*----------------------------------------- NOTRE EQUIPE ------------------------------------------------------*/
 
 .membres-team-info {
@@ -515,7 +483,8 @@ hr{
 .vulnerabilityTable {
     max-height: 100%;
     padding: 1em;
-    overflow-x:auto; 
+    overflow-x:auto;
+    margin-right: 4em;
 }
 
 table {
