--- a/index.css
+++ b/index.css
@@ -471,7 +471,7 @@ p {
     display: flex;
     justify-content: space-between;
     border-radius: 1em;
-    
+    margin-left: 2em;
     width: 100%;
     margin-bottom: 5em;
 }
