--- a/index.css
+++ b/index.css
@@ -14,6 +14,9 @@ body {
     width: 100%;
 }
 
+.opacity0 {
+    opacity: 0;
+}
 html{
     animation: fadeIn 1.5s ease-in-out forwards;
     width: 100%;
@@ -27,7 +30,7 @@ button {
     padding: 0.6em 0.6em;
     font-size: 1em;
     cursor: pointer;
-    background-color: #4f0341;
+    background-color: rgb(0, 5, 14);
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -38,7 +41,7 @@ button {
 button:hover {
     background-color: #4f0341;
     color: white;
-    border-radius: 0;
+    border-radius: 1em;
 }
 
 button:active {
@@ -97,15 +100,19 @@ button:active {
     border-radius: 1em;
     font-family: 0.5em;
     border-color: white;
-    
+}
 
+.language label{
+    font-size: 1em;
 }
 
 .language select:hover{
     border-radius: 1em;
     font-family: 0.5em;
     border-color: #4f0341;
-
+}
+select.flag-select option {
+    font-family: "Segoe UI Emoji", sans-serif;
 }
 
 .logo >img{
@@ -259,8 +266,7 @@ p {
     display: flex;
     align-items:center;
     justify-content: space-between;
-    padding-left: 1em;
-    padding-right: 4em;
+    padding-right: 1em;
 }
 
 .menu >img {
@@ -393,7 +399,7 @@ p {
   }
 
   .team-info:nth-child(even) {
-    background-color: rgb(0, 5, 50); /* Couleur de fond pour les éléments pairs */
+    background-color: rgb(0, 5, 50);
   }
 
   .team-info > a {
@@ -465,14 +471,12 @@ p {
 
 /*-------------------------------------- TABLEAU --------------------------------------------------*/
 
-
 .tableContainer{
     top :0;
     display: flex;
     justify-content: space-between;
     border-radius: 1em;
     margin-left: 2em;
-    width: 100%;
     margin-bottom: 5em;
 }
 
@@ -482,33 +486,46 @@ p {
 
 .vulnerabilityTable {
     max-height: 100%;
-    padding: 1em;
     overflow-x:auto;
     margin-right: 4em;
-}
-
-table {
-    border-collapse: collapse;
+    margin-left: 1em;
 }
 
 .research{
     color:whitesmoke;
+    margin-bottom: 3em;
+}
+
+.research > button{
+    border: 1px solid #ccc;
+    border-radius: 1em;
 }
 
 thead{
     width: 50%;
+    border-radius: 1em;
 }
-table, td {
+table {
     width: 100%;
-    border-radius: 0.3em;
-    padding: 25px 30px;
+    border-radius: 1em;
     height: 1em;
     top:0;
     border-collapse: collapse;
 }
 
+.large{
+    width: 50%;
+}
+
 td {
-    padding: 1em;
+    width: 10%;
+    border-radius: 0.5em;
+    top:0;
+    border-collapse: collapse;
+}
+
+.header-row > td {
+    padding: 2em;
 }
 
 tr{
@@ -521,10 +538,10 @@ tr{
 
 tr:nth-child(even){background-color: #f2f2f2}
 
-tr:hover {background-color: #4f0341;color: whitesmoke;}
+tr:hover {background-color: lightgray;color: black;}
 
 tr:first-child {
-    background-color: rgb(0, 5, 50);
+    background-color: #4f0341;
     font-size: 1em;
     color: white;
 }
@@ -546,7 +563,7 @@ input{
 }
 
 .info:hover{
-    background-color: #4CAF50;
+    background-color: rgb(93, 74, 112);
 }
 
 .info i {
@@ -616,7 +633,7 @@ input{
     bottom: 0;
     width: 15em; 
     height: auto;
-    background-color: rgb(0, 5, 50);
+    background-color: #4f0341;
     border-radius: 1em;
     animation: glisse 1s ease-out forwards;
 }
@@ -634,7 +651,7 @@ input{
     margin-bottom: 0.5em;
     border: 1px solid #ccc;
     border-radius: 1em;
-    background-color: #4f0341;
+    background-color: rgb(131, 125, 223);
 }
 
 .menu3 ul li a {
@@ -649,21 +666,17 @@ input{
     cursor: text;
     border-radius: 1em;
 }
+
 .submenu3 {
     display: none;
     position: absolute;
     top: 0;
     left: 12em;
-    background-color: rgb(0, 5, 50);
+    background-color: #4f0341;
     border-radius: 1em;
     z-index: 9999;
     animation: fadeIn 0.4s ease-out forwards;
 }
-
-.submenu3 > .menu3 ul {
-    background-color: red;
-}
-
 
 .submenu3 li {
     padding: 1em;
@@ -691,33 +704,36 @@ input{
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
+    
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 #definitionsTableContainer {
     position: relative;
-    width: 100%; /* Ajustez en fonction de vos besoins */
-    max-width: 1400px; /* Ajustez en fonction de vos besoins */
-    margin: 0 auto; /* Centre le tableau horizontalement */
 }
 
 .defTable {
-    width: 100%; /* Set the width to 100% */
+    margin-top: 5em;
+    width: 100%;
     overflow-x: auto; 
     overflow-y: visible;
 }
 
 .defTable th, .defTable td {
-    box-sizing: border-box; /* Include padding and border in the width */
-    padding: 8px; /* Adjust padding based on your design */
-    text-align: left; /* Align text as needed */
+    box-sizing: border-box;
+    padding: 2em; 
+    text-align: left; 
 }
 
-.defTable th:first-child, .defTable td:first-child {
-    width: 20%; /* Adjust the width for the first column */
+.defTable{
+    border-radius: 1em;
 }
 
-.defTable th:not(:first-child), .defTable td:not(:first-child) {
-    width: 40%; /* Adjust the width for the remaining columns */
+.definitions-container > h2 {
+    font-size: 2.5em;
+    letter-spacing: 0.08em;
+    font-weight: 100;
+    text-align: center;
+    color: whitesmoke;
 }
-
