--- a/index.css
+++ b/index.css
@@ -171,7 +171,7 @@ select.flag-select option {
     margin-bottom: 3em;
 }
 
-.presentation-container > h2,h3 {
+.presentation-container > h2,h3,h4 {
     background-color: #4f0341;
     border-radius: 1.5em;
     padding: 0.5em;
@@ -736,4 +736,57 @@ input{
     font-weight: 100;
     text-align: center;
     color: whitesmoke;
+}
+
+/*---------------------------------------- Comparaison -----------------------------------------------------------*/
+
+
+.comparaison-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+
+#comparaisonTableContainer {
+    position: relative;
+}
+
+.compTable {
+    margin-top: -20em;
+    margin-left: 15em;
+    width: 100%;
+    overflow-x: auto; 
+    overflow-y: visible;
+}
+
+.compTable th, .compTable td {
+    box-sizing: border-box;
+    padding: 2em; 
+    text-align: center;
+}
+
+.compTable {
+    border-radius: 1em;
+}
+
+.comparaison-container > h2 {
+    font-size: 5em;
+    letter-spacing: 0.08em;
+    font-weight: 100;
+    text-align: center;
+    color: whitesmoke;
+}
+
+.filter-text {
+    color: white !important;
+}
+
+.table-image{
+    margin-right: auto;
+    margin-top: 5em;
 }
